All resources and enpoints declared with swagger. A configuration file added. Restaurants controller done.
